3.0 beta 3
----------
Added Sybase as target for 'ant replaceDS'
Support for JBoss3.2.4/Tomcat5.0
Fixed bugg in Administrative deligations where a CA administrator could edit an superadmin group.
Changed so 'enable end entity limitations' is enabled by default.

3.0 beta 2
----------
Made SUN specific algorithms and providers configurable, to be able to use other jvm.
Fixed serious bug that caused certs to be signed by wrong CA after ejbPassivate.
Made DN order configurable with switch in source.
Alias in PKCS12 is now CN by default and username if CN does not exist.
Added possibility to configure publishers (LDAP, AD) through administrative web interface.
Implemented more SCEP functions, tested with Cisco VPN client.
Compound primary key for HardTokenPropertyBean.
Added junit tests of entity beans

3.0 beta 1
----------
Virtual CAs, run a complete hierarchy (or several) in one instance of EJBCA.
Easier installation and configuration with new install script.
Complete support for OCSP.
Added 'Authority Information Access' extension for OCSP service URL in certificates.
LDAP schema now correctly follows RFC 2256 and works with OpenLDAP 2.2. 
LDAP Publishing controlled from certificate profiles.
Possible to configure autogenerated passwords in admin web gui.
Improved support for keyrecovery.
Improved configuration of administrative privileges.
Many minor fixes and enhancements.

2.1.2
-----
LDAP schema now correctly follows RFC 2256 and works with OpenLDAP 2.2. 

2.1.1
-----
Improved error handing for batch generation.
Fixed some SQL for PostgreSQL.
Set Content-Type on OCSP responses.
Setup-adminweb supports JBoss 3.2.3.
For for internatinalization of admin-web with non ISO chars.
Minor debug cleanups.

2.1
----
Initial SCEP support.
Initial OCSP support.
Support for multiple CDPs separated by ';'
Removed unneded debug output of cert during creation
Fixed bug in setup-adminweb.sh
Fixed missing submit button with PEM/P12 users